// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ui text-input component snapshots should render email input 1`] = `
<div
  data-jsx={2337555898}
>
  <label
    data-jsx={2337555898}
  />
  <input
    data-jsx={2337555898}
    name={undefined}
    onChange={[Function]}
    placeholder={undefined}
    type="email"
    value={undefined}
  />
</div>
`;

exports[`ui text-input component snapshots should render placeholder email 1`] = `
<div
  data-jsx={2337555898}
>
  <label
    data-jsx={2337555898}
  />
  <input
    data-jsx={2337555898}
    name={undefined}
    onChange={[Function]}
    placeholder="email"
    type="email"
    value={undefined}
  />
</div>
`;

exports[`ui text-input component snapshots should render text input 1`] = `
<div
  data-jsx={2337555898}
>
  <label
    data-jsx={2337555898}
  />
  <input
    data-jsx={2337555898}
    name={undefined}
    onChange={[Function]}
    placeholder={undefined}
    type="text"
    value={undefined}
  />
</div>
`;
